# cli-lambda

./: .geminignore  .gitignore  README.md  commit_message.txt  pyproject.toml
cli_lambda/: env-example.json  java_scaffolder.py  main.py  utils.py
cli_lambda/scaffolders/: java.py  nodejs.py  quarkus.py
cli_lambda/templates/: GEMINI.md.j2
cli_lambda/templates/java/: Handler.java.j2  HandlerTest.java.j2  InputDto.java.j2  README.md.j2  Response.java.j2  azure-pipeline.yaml.j2  azure-pipelines-java21.yml.j2  azure-pipelines.yml.j2  checkstyle.xml.j2  event.template.json  gitignore.template  log4j2.xml.j2  pom.xml.j2  setup-codeartifact.ps1.j2  template.yaml.j2
cli_lambda/templates/java/infrastructure/: Handler.java.j2
cli_lambda/templates/nodejs/: azure-pipelines.yml.j2
cli_lambda/templates/nodejs/js/: README.md.j2  eslint.config.mjs.j2  gitignore.template  package.json.j2
cli_lambda/templates/nodejs/ts/: .env.example.j2  README.md.j2  esbuild.config.ts.j2  eslint.config.mjs.j2  index.ts.j2  jest.config.ts.j2  package.json.j2  setup-jest.ts.j2  tsconfig.json.j2
cli_lambda/templates/quarkus/: README.md.j2  azure-pipelines-graal.yml.j2  azure-pipelines-quarkus-jvm-java21.yml.j2  pom.xml.j2
cli_lambda/templates/quarkus/application/: GreetingService.java.j2
cli_lambda/templates/quarkus/domain/: Greeting.java.j2
cli_lambda/templates/quarkus/event/: EventHandler.java.j2  EventHandlerTest.java.j2  README.md.j2  pom.xml.j2  template.yaml.j2
cli_lambda/utils/: dependency_validator.py  env_config.py  template_renderer.py
(+24 files in other folders)
